ProxyResolverFactoryMojo::Job:  Only listen to errors on client pointer.

When there's an error, the ProxyResolver would invoke a method on the
ProxyResolverFactoryRequestClient pipe to pass along an error code and
close both that pipe and the ProxyResolver pipe. The Job was listening
for error on both pipes, so could see the ProxyResolver pipe close
before getting a more useful error code on the
ProxyResolverFactoryRequestClient pipe.

This CL fixes that by just listening for the client pipe to close.

Also, this CL closes the client pipe on completion, to protect against
unexpected extra messages, if the Job isn't deleted immediately.

Bug: 869551
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I2a1942d851e1d2cc4a33b0fb1278d914aac3593f
Reviewed-on: https://chromium-review.googlesource.com/1159196
Reviewed-by: Eric Roman <eroman@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580996}
Former-commit-id: 57639bd5ec9e69c5d59ca77e13d647a5f1871242